--- a/OBIABUCHI_MARTIN_NNANNA_ONECAMPUS_PROJECT_MUSKET_TEAM_08_2023.ipynb
+++ b/OBIABUCHI_MARTIN_NNANNA_ONECAMPUS_PROJECT_MUSKET_TEAM_08_2023.ipynb
@@ -18,7 +18,7 @@
     "                            TO\n",
     "                            \n",
     "                            \n",
-    "                      PROF. STANLEY OMEIKE\n"
+    "                      PROF. STANLEY OMEIKE (Ph.D)\n"
    ]
   },
   {
